--- a/ali-demo-gateway/pom.xml
+++ b/ali-demo-gateway/pom.xml
@@ -1,25 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>org.example</groupId>
         <artifactId>springCloud-ali</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+
+    <artifactId>ali-demo-gateway</artifactId>
+
     <groupId>com.example</groupId>
-    <artifactId>ali-demo-order</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>ali-demo-order</name>
-    <description>ali-demo-order</description>
+    <name>ali-demo-gateway</name>
+    <description>ali-demo-gateway</description>
     <properties>
         <java.version>8</java.version>
     </properties>
+
     <dependencies>
-
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-gateway</artifactId>
+            <version>2.2.1.RELEASE</version>
+        </dependency>
     </dependencies>
-
 
     <build>
         <plugins>
