--- a/ali-demo-gateway/src/main/resources/bootstrap.yml
+++ b/ali-demo-gateway/src/main/resources/bootstrap.yml
@@ -12,18 +12,23 @@ spring:
         group: demo
     gateway:
       routes:
-        - id: ali-user-demo           #路由的ID，没有固定规则但要求唯一，建议配合服务名
-          uri: http://localhost:9090    #匹配后提供服务的路由地址
-          predicates:
-            - Path=/user/**    #断言，路径相匹配的进行路由
-
-        - id: ali-demo-order
-          uri: http://localhost:9091
-          predicates:
-            - Path=/order/**
+        config:
+          data-id: gateway-routes  #动态路由
+          group: demo
+          namespace: demo
       discovery:
         locator:
           enabled: true
+    #      routes:
+    #        - id: ali-user-demo           #路由的ID，没有固定规则但要求唯一，建议配合服务名
+    #          uri: http://localhost:9090    #匹配后提供服务的路由地址
+    #          predicates:
+    #            - Path=/user/**    #断言，路径相匹配的进行路由
+    #
+    #        - id: ali-demo-order
+    #          uri: http://localhost:9091
+    #          predicates:
+    #            - Path=/order/**
 
 
 
