新增gateway测试,整合mybatis-flex实现全局过滤,jwt鉴权

--- a/ali-user-demo/pom.xml
+++ b/ali-user-demo/pom.xml
@@ -18,6 +18,11 @@
     </properties>
     <dependencies>
 
+        <dependency>
+            <groupId>com.example</groupId>
+            <artifactId>ali-demo-common</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
