--- a/ali-demo-gateway/src/main/resources/bootstrap.yml
+++ b/ali-demo-gateway/src/main/resources/bootstrap.yml
@@ -1,11 +1,49 @@
 server:
   port: 9010
 
+
 spring:
   application:
     name: ali-demo-gateway
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    url: jdbc:mysql://127.0.0.1:3306/user?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
+    driverClassName: com.mysql.cj.jdbc.Driver
+    username: root
+    password: 123456
+    filters: stat
+    initialSize: 2
+    maxActive: 300
+    maxWait: 60000
+    timeBetweenEvictionRunsMillis: 60000
+    minEvictableIdleTimeMillis: 300000
+    validationQuery: SELECT 1
+    testWhileIdle: true
+    testOnBorrow: false
+    testOnReturn: false
+    poolPreparedStatements: false
+    maxPoolPreparedStatementPerConnectionSize: 200
+  redis:
+    database: 0
+    host: 127.0.0.1   #192.168.10.10
+    port: 6379
+    password: 123456    # 密码（默认为空）
+    timeout: 6000ms  # 连接超时时长（毫秒）
+    jedis:
+      pool:
+        max-active: 1000  # 连接池最大连接数（使用负值表示没有限制）
+        max-wait: -1ms      # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-idle: 10      # 连接池中的最大空闲连接
+        min-idle: 5       # 连接池中的最小空闲连接
   cloud:
     nacos:
+      config:
+        server-addr: localhost:8848
+        namespace: demo
+        file-extension: yml
+        extension-configs[0]:
+          data-id: ali-user-demo.yml
+          group: demo
       discovery:
         server-addr: localhost:8848
         namespace: demo
@@ -29,6 +67,11 @@ spring:
     #          uri: http://localhost:9091
     #          predicates:
     #            - Path=/order/**
-
+#  jwt 的配置
+jwt:
+  tokenHeader: Authorization
+  secret: mdx-secrt000001
+  expiration: 604800 #秒
+  prefix: Bearer
 
 
