--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
             <artifactId>spring-cloud-starter-alibaba-seata</artifactId>
             <version>2.2.5.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+        </dependency>
 
 
         <dependency>
